--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,26 +6,31 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AndroidBasic">
-<!--        <activity-->
-<!--            android:name=".TestingRestApi"-->
-<!--            android:exported="true" />-->
+        android:theme="@style/Theme.AndroidBasic"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".TestingRestApi"
+            android:name=".LiveTask"
             android:exported="true"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_live_task"
+            android:theme="@style/Theme.AndroidBasic.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- <activity -->
+        <!-- android:name=".TestingRestApi" -->
+        <!-- android:exported="true" /> -->
+        <activity
+            android:name=".TestingRestApi"
+            android:exported="true"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
