--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".LiveTaskActivity"
+            android:exported="true" />
+        <activity
+            android:name="MaterialLookActivity"
             android:exported="true"
             android:label="@string/title_activity_live_task"
             android:theme="@style/Theme.AndroidBasic.NoActionBar">
@@ -23,14 +26,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- <activity -->
+        </activity> <!-- <activity -->
         <!-- android:name=".TestingRestApi" -->
         <!-- android:exported="true" /> -->
         <activity
             android:name=".TestingRestApi"
             android:exported="true"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
     </application>
 
 </manifest>
