search box implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".SignInActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SearchActivity"
+            android:label="Search Food Item"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,8 +30,7 @@
             android:name=".LiveTaskActivity"
             android:exported="true"
             android:label="@string/title_activity_live_task"
-            android:theme="@style/Theme.AndroidBasic.NoActionBar">
-        </activity> <!-- <activity -->
+            android:theme="@style/Theme.AndroidBasic.NoActionBar"></activity> <!-- <activity -->
         <!-- android:name=".TestingRestApi" -->
         <!-- android:exported="true" /> -->
         <activity
