--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
             android:exported="true" />
         <activity
             android:name=".SignInActivity"
-            android:exported="true" />
+            android:theme="@style/Theme.AndroidBasic.NoActionBar"
+            android:exported="false" />
         <activity
             android:name=".SignupActivity"
             android:exported="true">
@@ -30,14 +31,15 @@
         </activity>
         <activity
             android:name=".LiveTaskActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_live_task"
             android:theme="@style/Theme.AndroidBasic.NoActionBar" /> <!-- <activity -->
         <!-- android:name=".TestingRestApi" -->
         <!-- android:exported="true" /> -->
         <activity
             android:name=".TestingRestApi"
-            android:exported="true"
+            android:exported="false"
+            android:theme="@style/Theme.AndroidBasic.NoActionBar"
             android:label="@string/title_activity_login" />
     </application>
 
