--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.22'
