--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/Theme.AndroidBasic"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".SignInActivity"
+            android:theme="@style/Theme.AndroidBasic.NoActionBar"
+            android:name=".TabActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,11 +24,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".SignInActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".LiveTaskActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_live_task"
-            android:theme="@style/Theme.AndroidBasic.NoActionBar">
-        </activity> <!-- <activity -->
+            android:theme="@style/Theme.AndroidBasic.NoActionBar"></activity> <!-- <activity -->
         <!-- android:name=".TestingRestApi" -->
         <!-- android:exported="true" /> -->
         <activity
