--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    //Payment-gateway
+    implementation 'com.razorpay:checkout:1.6.15'
 
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.22'
